Fixes overlay dark mode and adjusts navbar on mobile

--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -113,14 +113,14 @@
     .header-favicon {
       width: 28px;
       height: 28px;
-      margin-right: 8px;
+      margin-right: 4px;
       flex-shrink: 0; // Prevent shrinking
     }
 
     .header-chevron {
       width: 16px;
       height: 16px;
-      margin-right: 8px;
+      margin-right: 2px;
       flex-shrink: 0; // Prevent shrinking
     }
 
